--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fetch-signature",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "MIT",
@@ -10,11 +10,8 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "prepublishOnly": "npm run build"
   },
-  "peerDependencies": {
-
-  },
-  "dependencies": {
-  },
+  "peerDependencies": {},
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/o-network/fetch-signature.git"
